--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
                     Music
                     <img src="/assets/music-play-icon-thick.svg" alt="music icon" class="btn-icon">
                     </button></li>
-                <li><a href="/books/new"><button class="filter-btn new-entry-btn">
+                <li><a href="/media/new"><button class="filter-btn new-entry-btn">
                     New
                     <img src="/assets/new.svg" alt="new icon" class="btn-icon">
                 </button></a></li>
