--- a/views/edit-media.ejs
+++ b/views/edit-media.ejs
@@ -3,24 +3,24 @@
     <%- include('partials/header.ejs'); %>
 
 <main>
-    <h2>Edit Review</h2> 
+    <h2>Edit Review</h2>
     <% if (typeof error !== 'undefined') { %>
         <p class="error-message"><%= error %></p>
     <% } %>
-    <form action="/books/edit/<%= book.id %>" method="POST">
+    <form action="/media/edit/<%= item.id %>" method="POST">
         <div class="form-group">
             <label for="title">Title:</label>
-            <input type="text" id ="title" name="title" value="<%= book.book_title %>" required>
+            <input type="text" id ="title" name="title" value="<%= item.title %>" required>
         </div>
         <div class="form-group">
-            <label for="author">Author:</label>
-            <input type="text" id="author" name="author" value="<%= book.book_author %>" required>
+            <label for="creator">Creator:</label>
+            <input type="text" id="creator" name="creator" value="<%= item.creator %>" required>
         </div>
         <div class="form-group">
             <label for="review">Review:</label>
-            <textarea id="review" name="review" rows="10" required><%= book.review %></textarea>
+            <textarea id="review" name="review" rows="10" required><%= item.review %></textarea>
         </div>
-        <button type="submit" class="btn-save">Update Book</button>
+        <button type="submit" class="btn-save">Update Media</button>
     </form>
 </main>
 
