--- a/views/new-media.ejs
+++ b/views/new-media.ejs
@@ -1,9 +1,10 @@
+<%# new-media.ejs %>
 <!DOCTYPE html>
 <html lang="en">
     <%- include('partials/header.ejs'); %>
 
 <main>
-    <h2>Add New Book</h2> 
+    <h2>Add New Media</h2> 
     
     <form action="/books" method="POST">
         <div class="form-group">
