--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<%# header.ejs %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +35,7 @@
                     </button></li>
                 <li><button class="filter-btn">
                     Music
-                    <img src="/assets/music-play-icon-thick.svg" alt="music icon" class="btn-icon">
+                    <img src="/assets/music-icon-thick.svg" alt="music icon" class="btn-icon">
                     </button></li>
                 <li><a href="/books/new"><button class="filter-btn new-entry-btn">
                     New
