--- a/views/edit-media.ejs
+++ b/views/edit-media.ejs
@@ -23,6 +23,9 @@
         </div>
         <button type="submit" class="btn-save">Update Media</button>
     </form>
+    <form action="/media/delete/<%= item.id %>" method="POST" style="display: inline;">
+        <button type="submit" class="btn-delete" onclick="return confirm('Are you sure you want to delete this review?')">Delete</button>
+    </form>
 </main>
 
 <%- include ('partials/footer.ejs') %>
