--- a/public/styles.css
+++ b/public/styles.css
@@ -128,6 +128,7 @@ main {
 
 .card-footer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin-top: auto;
